# programming-with-python-24

./: pyproject.toml
programming_with_python_24/: overview_basics_concepts.ipynb
