[tool.poetry]
name = "programming-with-python-24"
version = "0.1.0"
description = ""
authors = ["Gion Rubitschung <gionrubi@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipynb = "^0.5.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
